pkg/check/testdata/ub/types/valid/root-locals.ub
factory: {
  locals: { path: 5 }
  resources: {
    file: local.file {
      path: local.path
      content: 'x'
    }
  }
}
