pkg/check/testdata/ub/types/invalid/composite-syntax-root.ub
factory: {
  resources: {
    app: outer.greeting {}
    log: local.file { path: resource.app.size, content: 'x' }
  }
}
